# ai-created

./: README.md  ROADMAP.md  next.config.mjs  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/child/: page.tsx
app/components/: AudioPlayer.tsx  StoryCard.tsx
app/data/: mockStories.ts
app/lib/: types.ts
app/parent/: page.tsx
training-matrix-approval-agent/: .env.example  AGENTS.md  README.md  requirements.txt
training-matrix-approval-agent/config/: settings.yaml  staff_name_aliases.csv  training_mapping.csv
training-matrix-approval-agent/docs/: approval_process.md  failure_paths.md  workflow.md
training-matrix-approval-agent/src/: approval.py  attendance_parser.py  audit_logger.py  file_router.py  main.py  matcher.py  matrix_reader.py  matrix_updater.py  pdf_extractor.py
training-matrix-approval-agent/tests/: test_attendance_parser.py  test_end_to_end_sample.py  test_matcher.py  test_matrix_update_rules.py  test_pdf_extractor.py
training_matrix_agent/: README.md  pyproject.toml
training_matrix_agent/docs/: implementation_plan.md  test_cases.md
training_matrix_agent/src/training_matrix_agent/: __init__.py
training_matrix_agent/src/training_matrix_agent/core/: matching.py
training_matrix_agent/src/training_matrix_agent/models/: schemas.py
training_matrix_agent/src/training_matrix_agent/services/: audit_service.py  extractor.py  extractor_stub.bak  matrix_service.py  proposal_service.py  workflow.py
training_matrix_agent/tests/: test_proposal_rules.py  test_workflow.py
