[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "training-matrix-approval-agent"
version = "0.1.0"
description = "Starter implementation for Training Matrix Approval Agent"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "openpyxl>=3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
